@startuml P2P Marketplace

entity Offer {
    * id: <<uuid>>
    --
    * userId: <<FK>>
    * name: string
    * description: string
    * price: decimal
    * category: string
    * pictures: <<url>>
    * created_at: datetime
    sold_at: datetime

    transactionId: <<FK>>
    updated_at: datetime
    deleted_at: datetime
}

entity User {
    * id: <<uuid>>
    --
    * name: string
    * password_hash: string
    * email: string
    * phone: string
    * address: string
    * created_at: datetime
    *rating_sum: float
    *rating_count: int
    *image: <<url>>
/'    freshest token + valid_until ?? '/
    updated_at: datetime
    deleted_at: datetime
}

entity Transaction {
    * id: <<uuid>>
    --
    * sellerId: <<FK>>
    * buyerId: <<FK>>
    * amount: decimal
    * status: string
    * created_at: datetime
    updated_at: datetime
}

entity FundsAccount {
    * id: <<uuid>>
    --
    * userId: <<FK>>
    * balance: decimal
/'    * currency: string '/
    * created_at: datetime
    updated_at: datetime
}

entity CounterOffer {
    *id: <<uuid>>
    --
    *offerId: <<FK>>
    *userId: <<FK>>
    offers: Offer[]
    payment: decimal
    *status: string
    *created_at: datetime
    updated_at: datetime
    deleted_at: datetime
}

User ||--o{ Offer : offers  
User ||--o{ Transaction : recieved
User ||--o{ Transaction : sent
Offer ||--o| Transaction : has
User ||--|| FundsAccount : owns
Offer ||--o| CounterOffer : has

@enduml